// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Episodes Test Suite renders correctly without any data 1`] = `
<section
  className="undefined flex wrap"
>
  <Pagination
    contentLength={0}
    currentPage={1}
    limit={20}
    onChange={[Function]}
  />
</section>
`;

exports[`Episodes Test Suite renders correctly without any data 2`] = `
<section
  className="undefined flex wrap"
>
  <Card
    dataObj={
      Object {
        "AIR DATE": "December 2, 2013",
        "EPISODE": "S01E01",
      }
    }
    heading="Pilot"
    imgSrc=""
    key="1"
  />
  <Pagination
    contentLength={1}
    currentPage={1}
    limit={20}
    onChange={[Function]}
  />
</section>
`;
